--- a/res/values-es/ex_strings.xml
+++ b/res/values-es/ex_strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 The Pure Nexus Project
+<!--
+     Copyright (C) 2017 Aosp Extended
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,10 +16,10 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Tab label for version information [CHAR LIMIT=20] -->
-    <string name="appVersion">Version Info</string>
-    <string name="currentVersion">Current Version:</string>
-    <string name="newVersion">New Version:</string>
-    <string name="not_available">not available</string>
+    <string name="appVersion">Info. de versión</string>
+    <string name="currentVersion">Versión actual:</string>
+    <string name="newVersion">Nueva versión:</string>
+    <string name="not_available">no disponible</string>
     <!-- Body text for new tab when there are no permissions [CHAR LIMIT=NONE] -->
-    <string name="no_perms">This app requires no permissions.</string>
+    <string name="no_perms">Esta aplicación no requiere nuevos permisos.</string>
 </resources>
