--- a/res/values-it/ex_strings.xml
+++ b/res/values-it/ex_strings.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 The Pure Nexus Project
+<!--
+     Copyright (C) 2017 Aosp Extended
+
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
+
           http://www.apache.org/licenses/LICENSE-2.0
+
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -12,10 +16,10 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Tab label for version information [CHAR LIMIT=20] -->
-    <string name="appVersion">Info. de versión</string>
-    <string name="currentVersion">Versión actual:</string>
-    <string name="newVersion">Nueva versión:</string>
-    <string name="not_available">no disponible</string>
+    <string name="appVersion">Informazioni sulla versione</string>
+    <string name="currentVersion">Versione corrente:</string>
+    <string name="newVersion">Nuova versione:</string>
+    <string name="not_available">non disponibile</string>
     <!-- Body text for new tab when there are no permissions [CHAR LIMIT=NONE] -->
-    <string name="no_perms">Esta aplicación no requiere nuevos permisos.</string>
+    <string name="no_perms">Questa applicazione non richiede autorizzazioni.</string>
 </resources>
