--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -33,4 +33,11 @@
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
+    <style name="settings_pixel_theme">
+        <item name="android:colorPrimary">@color/pixel_primary_color</item>
+        <item name="android:colorPrimaryDark">@color/pixel_primary_color</item>
+        <item name="android:colorSecondary">@color/pixel_secondary_color</item>
+    </style>
+
+
 </resources>
