--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -52,5 +52,11 @@
         <item name="android:colorSecondary">@color/pixel_secondary_color</item>
     </style>
 
+    <style name="settings_pixel_theme">
+        <item name="android:colorPrimary">@color/pixel_primary_color</item>
+        <item name="android:colorPrimaryDark">@color/pixel_primary_color</item>
+        <item name="android:colorSecondary">@color/pixel_secondary_color</item>
+    </style>
+
 
 </resources>
