--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -78,5 +78,9 @@
         <item name="android:colorSecondary">@color/pixel_secondary_color</item>
     </style>
 
+    <style name="installappprogress_pixel_theme_dark">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
 
 </resources>
