--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -33,6 +33,19 @@
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
+    <style name="grantpermissions_pixel_theme">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:colorPrimary">@color/pixel_primary_color</item>
+        <item name="android:colorPrimaryDark">@color/pixel_primary_color</item>
+        <item name="android:colorSecondary">@color/pixel_secondary_color</item>
+        <item name="*android:windowFixedHeightMajor">100%</item>
+        <item name="*android:windowFixedHeightMinor">100%</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowAnimationStyle">@*android:style/Animation.Material.Dialog</item>
+    </style>
+
     <style name="settings_pixel_theme">
         <item name="android:colorPrimary">@color/pixel_primary_color</item>
         <item name="android:colorPrimaryDark">@color/pixel_primary_color</item>
